--- a/VideoClubEF2022.Datos/VideoClubEF2022.Datos.csproj
+++ b/VideoClubEF2022.Datos/VideoClubEF2022.Datos.csproj
@@ -56,6 +56,7 @@
     <Compile Include="EntityTypeConfigurations\GenerosEntityTypeConfigurations.cs" />
     <Compile Include="EntityTypeConfigurations\LocalidadesEntityTypeConfigurations.cs" />
     <Compile Include="EntityTypeConfigurations\ProvinciasEntityTypeConfigurations.cs" />
+    <Compile Include="EntityTypeConfigurations\SociosEntityTypeConfigurations.cs" />
     <Compile Include="EntityTypeConfigurations\SoporteEntityTypeConfigurations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\Facades\IRepositorioSoportes.cs" />
@@ -74,6 +75,7 @@
     <Compile Include="Repositorios\RepositorioEstados.cs" />
     <Compile Include="Repositorios\RepositorioLocalidades.cs" />
     <Compile Include="Repositorios\RepositorioProvincias.cs" />
+    <Compile Include="Repositorios\RepositorioSocios.cs" />
     <Compile Include="Repositorios\RepositorioSoportes.cs" />
     <Compile Include="VideoClubEF2022DbContext.cs" />
   </ItemGroup>
