--- a/VideoClubEF2022.Servicios/VideoClubEF2022.Servicios.csproj
+++ b/VideoClubEF2022.Servicios/VideoClubEF2022.Servicios.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Servicios\ServicioEstados.cs" />
     <Compile Include="Servicios\ServicioLocalidades.cs" />
     <Compile Include="Servicios\ServicioProvincias.cs" />
+    <Compile Include="Servicios\ServicioSocios.cs" />
     <Compile Include="Servicios\ServicioSoportes.cs" />
   </ItemGroup>
   <ItemGroup>
