--- a/VideoClubEF2022.Windows/VideoClubEF2022.Windows.csproj
+++ b/VideoClubEF2022.Windows/VideoClubEF2022.Windows.csproj
@@ -128,6 +128,12 @@
     <Compile Include="frmProvinciasAE.Designer.cs">
       <DependentUpon>frmProvinciasAE.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSocios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSocios.Designer.cs">
+      <DependentUpon>frmSocios.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmSoportes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -182,6 +188,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmProvinciasAE.resx">
       <DependentUpon>frmProvinciasAE.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSocios.resx">
+      <DependentUpon>frmSocios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSoportes.resx">
       <DependentUpon>frmSoportes.cs</DependentUpon>
