--- a/VideoClubEF2022.Datos/VideoClubEF2022.Datos.csproj
+++ b/VideoClubEF2022.Datos/VideoClubEF2022.Datos.csproj
@@ -58,6 +58,7 @@
     <Compile Include="EntityTypeConfigurations\ProvinciasEntityTypeConfigurations.cs" />
     <Compile Include="EntityTypeConfigurations\SociosEntityTypeConfigurations.cs" />
     <Compile Include="EntityTypeConfigurations\SoporteEntityTypeConfigurations.cs" />
+    <Compile Include="EntityTypeConfigurations\TiposDocumentosEntityTypeConfigurations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\Facades\IRepositorioSoportes.cs" />
     <Compile Include="Repositorios\Facades\IRepositorioEstados.cs" />
@@ -70,13 +71,14 @@
     <Compile Include="Repositorios\Facades\IRepositorioProvincias.cs" />
     <Compile Include="Repositorios\Facades\IRepositorioSocios.cs" />
     <Compile Include="Repositorios\Facades\IRepositorioTiposDocumentos.cs" />
-    <Compile Include="Repositorios\Facades\RepositorioGeneros.cs" />
+    <Compile Include="Repositorios\RepositorioGeneros.cs" />
     <Compile Include="Repositorios\RepositorioCalificaciones.cs" />
     <Compile Include="Repositorios\RepositorioEstados.cs" />
     <Compile Include="Repositorios\RepositorioLocalidades.cs" />
     <Compile Include="Repositorios\RepositorioProvincias.cs" />
     <Compile Include="Repositorios\RepositorioSocios.cs" />
     <Compile Include="Repositorios\RepositorioSoportes.cs" />
+    <Compile Include="Repositorios\RepositorioTiposDocumentos.cs" />
     <Compile Include="VideoClubEF2022DbContext.cs" />
   </ItemGroup>
   <ItemGroup>
