--- a/VideoClubEF2022.Servicios/VideoClubEF2022.Servicios.csproj
+++ b/VideoClubEF2022.Servicios/VideoClubEF2022.Servicios.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServicioGeneros.cs" />
+    <Compile Include="Servicios\ServicioGeneros.cs" />
     <Compile Include="Servicios\Facades\IServicioProvincias.cs" />
     <Compile Include="Servicios\Facades\IServicioPeliculas.cs" />
     <Compile Include="Servicios\Facades\IServicioLocalidades.cs" />
@@ -53,12 +53,14 @@
     <Compile Include="Servicios\Facades\IServicioProveedores.cs" />
     <Compile Include="Servicios\Facades\IServicioSocios.cs" />
     <Compile Include="Servicios\Facades\IServicioSoportes.cs" />
+    <Compile Include="Servicios\Facades\IServicioTiposDocumentos.cs" />
     <Compile Include="Servicios\ServicioCalificaciones.cs" />
     <Compile Include="Servicios\ServicioEstados.cs" />
     <Compile Include="Servicios\ServicioLocalidades.cs" />
     <Compile Include="Servicios\ServicioProvincias.cs" />
     <Compile Include="Servicios\ServicioSocios.cs" />
     <Compile Include="Servicios\ServicioSoportes.cs" />
+    <Compile Include="Servicios\ServicioTiposDocumentos.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VideoClubEF2022.Datos\VideoClubEF2022.Datos.csproj">
