--- a/VideoClubEF2022.Datos/VideoClubEF2022.Datos.csproj
+++ b/VideoClubEF2022.Datos/VideoClubEF2022.Datos.csproj
@@ -51,15 +51,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EntityTypeConfiguration\CalificacionEntityTypeConfigurations.cs" />
-    <Compile Include="EntityTypeConfiguration\EstadosEntityTypeConfigurations.cs" />
-    <Compile Include="EntityTypeConfiguration\GenerosEntityTypeConfigurations.cs" />
-    <Compile Include="EntityTypeConfiguration\LocalidadesEntityTypeConfigurations.cs" />
-    <Compile Include="EntityTypeConfiguration\PeliculaEntityTypeConfigurations.cs" />
-    <Compile Include="EntityTypeConfiguration\ProvinciasEntityTypeConfigurations.cs" />
-    <Compile Include="EntityTypeConfiguration\SociosEntityTypeConfigurations.cs" />
-    <Compile Include="EntityTypeConfiguration\SoporteEntityTypeConfigurations.cs" />
-    <Compile Include="EntityTypeConfiguration\TiposDocumentosEntityTypeConfigurations.cs" />
+    <Compile Include="EntityTypeConfiguration\CalificacionEntityTypeConfiguration.cs" />
+    <Compile Include="EntityTypeConfiguration\EmpleadoEntityTypeConfiguration.cs" />
+    <Compile Include="EntityTypeConfiguration\EstadoEntityTypeConfiguration.cs" />
+    <Compile Include="EntityTypeConfiguration\GeneroEntityTypeConfiguration.cs" />
+    <Compile Include="EntityTypeConfiguration\LocalidadEntityTypeConfiguration.cs" />
+    <Compile Include="EntityTypeConfiguration\PeliculaEntityTypeConfiguration.cs" />
+    <Compile Include="EntityTypeConfiguration\ProveedorEntityTypeConfiguration.cs" />
+    <Compile Include="EntityTypeConfiguration\ProvinciaEntityTypeConfiguration.cs" />
+    <Compile Include="EntityTypeConfiguration\SocioEntityTypeConfiguration.cs" />
+    <Compile Include="EntityTypeConfiguration\SoporteEntityTypeConfiguration.cs" />
+    <Compile Include="EntityTypeConfiguration\TipoDocumentoEntityTypeConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\Facades\IRepositorioSoportes.cs" />
     <Compile Include="Repositorios\Facades\IRepositorioEstados.cs" />
@@ -72,11 +74,13 @@
     <Compile Include="Repositorios\Facades\IRepositorioProvincias.cs" />
     <Compile Include="Repositorios\Facades\IRepositorioSocios.cs" />
     <Compile Include="Repositorios\Facades\IRepositorioTiposDocumentos.cs" />
+    <Compile Include="Repositorios\RepositorioEmpleados.cs" />
     <Compile Include="Repositorios\RepositorioGeneros.cs" />
     <Compile Include="Repositorios\RepositorioCalificaciones.cs" />
     <Compile Include="Repositorios\RepositorioEstados.cs" />
     <Compile Include="Repositorios\RepositorioLocalidades.cs" />
     <Compile Include="Repositorios\RepositorioPeliculas.cs" />
+    <Compile Include="Repositorios\RepositorioProveedores.cs" />
     <Compile Include="Repositorios\RepositorioProvincias.cs" />
     <Compile Include="Repositorios\RepositorioSocios.cs" />
     <Compile Include="Repositorios\RepositorioSoportes.cs" />
